@@ -1,4 +1,5 @@
 4.0.15
+When using Enter-BcContainer in PowerShell 7, the containername prompt was displayed twice
 Support PSSession for PowerShell 7 (or PS5 without running as administrator) by using winrm with a hardcoded user with a password set to the host machine UUID (this user created by New-BcContainerSession if needed)
 New function Compile-AppWithBcCompilerFolder, to compile an app without using containers.
 New function Copy-AppFilesToCompilerFolder, to "install" apps in the symbols folder of a compilerFolder.
